need to langlerangle, write bash script, and comment source files before submit

--- a/README
+++ b/README
@@ -1,2 +1,12 @@
 # Iris
 
+Ayda Aricanli
+Trevor Sullivan
+Tim Valk
+Valerie Zhang
+Josh Kim
+
+# TODO: 
+    describe how to compile and execute your compiler (as it stands)
+    how to run your test script
+    any syntax that you still need to add to your compiler
