--- a/TODO
+++ b/TODO
@@ -1,3 +1,11 @@
+### PEMRIT STUFF
+- add array of strings to class jumptables
+
+
+
+
+
+
 # FIX LRM (look at canvas comments)
 
 # List literals and function calls?
