--- a/README
+++ b/README
@@ -14,8 +14,11 @@ the same environment as MicroC.
 
 # How to run test script
 
-To run the testing script that runs the test suite, run './runtest.sh' 
-in terminal. You can also run './runtest.sh $filename$' to run a specific test.
+Running the test script may require changing the LLC and LLI variables. 
+"$(which llc)" was giving us trouble on our local machines.
+
+To run the testing script that runs the test suite, run "sh runtests" in 
+terminal. You can also run 'sh runtests tests/$filename$' to run a specific test.
 To keep intermediary files, run with the '-k' flag. The default options will 
 run our test-hello-world.iris test, which is the only test in the suite right
 now.
@@ -25,20 +28,76 @@ provided in the test suite. All golden standard files contain the
 corresponding test name and terminates with '.out' as its name. The test 
 script will not successfully compile a test program when it is incorrect.
 
-# What is in the test suite
+# What is in the test suite 
+failure tests:
 
-The test suite contains a single simple program that contains a single class 
-"Main" with one public member function "main" that prints "Hello world!" with 
-a newline after. It also contains the golden standard output file for that 
-test. 
+    assign-typ
+    -- Assign a variable with an expression of a different type
+
+    assign-undeclared 
+    -- Assign an undeclared variable a value
+
+    classvar-int
+    -- Access a member variable from an int
+
+    classvar-priv
+    -- Access a class member that is private
+
+    classvar-typ-assign
+    -- Assign a class member with an expression of a different type
+
+    duplicate-classes
+    -- Define two Mains 
+
+    duplicate-other-classes
+    -- Define two classes with the same name
+
+    id-DNE
+    -- Access an uninitialized variable
+
+    local-decl
+    -- Declare two variables of the same name and type in the same function
+    
+    local-dup
+    -- Declare two variables of the same name of different types in the same function
+
+passing tests:
+    assign-and-access:
+    -- Declare, assign, and print a string variable in three separate statements 
+
+    assign1:
+    -- Declare and assign an int variable in two separate statements
+    
+    assign2:
+    -- Declare and assign a string variable in two separate statements
+
+    assign-and-access: 
+    -- Declare, assign, and print a string variable in three separate statements
+    
+    hello-world;
+    -- Print out the string "Hello world!" using Olympus.print printing function
+    
+    lits1:
+    -- Declare and assign int, bool, and string locals in main(declaration and assign are on 2 lines)
+    
+    local-main:
+    -- Declare a local variable in main
+
+    main-classinst:
+    -- Declare an instance of a class in main
+
+    main-inst-mem-assign:
+    -- Assign a value to a public member variable in a class instance
+
+    print-classvar:
+    -- Access a public string class variable in a call to Olympus.print
+
 
 # What needs to be added
 
-Most of our underlying structure has been implemented but we have much more 
-semantic checking to be done. Right now, we are doing minimal checking and 
-assuming that we are compiling a simple program that only contains the Main 
-class and one method. The method also can only contain a function call to 
-"print" in Olympus (one of our built-in classes), string literals, return 
-statement, and integer literals. Moving forward, we will need to implement 
-the rest of the cases to semantically check expressions, statements, etc. 
-We will also need to handle encapsulation and inheritance.
+While we have built our inheritance tree and implemented public and private 
+variables, we still need to handle inheriting and overloading parent members, 
+function calls (with encapsulation checking), and permitted members in classes.
+We also have to add smaller features like float and char literals, additional
+binary and unary operators, if/while statements, and a few other MicroC features
+that are included in our langauge.
